--- a/NEWCRM/bin/NEWCRM.dll.config
+++ b/NEWCRM/bin/NEWCRM.dll.config
@@ -34,6 +34,7 @@
     <add key="CASE_Payment_Type" value="ชำระเงินปลายทาง|ชำระเงินผ่านบัญชีธนาคาร|ชำระเงินผ่านบัตรเครดิต|ชำระเงินผ่าน 3rd Party|อื่นๆ" />
     <add key="CASE_Value_Range" value="น้อยกว่า 1000 บาท|1,001 - 2,000 บาท|2,001 - 3,000 บาท|3,001 - 5,000 บาท|5,001 - 10,000 บาท|มากกว่า 10,000 บาท " />
     <add key="CASE_Conversation_Channel" value="โทรศัพท์|อีเมล|facebook|instagram|Line|Blog|อื่นๆ" />
+    <add key ="CASE_Status_Reason" value="Complete|Escalate|Open – ปิดมือถือ|Open – ไมร่ับสาย|Open – หมายเลขยังไม่เปิดให้บริการ|Open – ฝากข้อความ|Transfer to ETDA"/>
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
