--- a/NEWCRM/bin/Web.config
+++ b/NEWCRM/bin/Web.config
@@ -9,11 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=.;Database=CRMORIGIN;User Id=sa;Password=aonbom;" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=PPHAPPY\SQLEXPERESS;Database=CRMORIGIN;User Id=sa;Password=pphappy;" />
     <!--add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=tcp:parnupongk.database.windows.net,1433;Database=newcrm;Uid=parnupongk;Pwd=aonbom@1101;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;" /-->
 
     <!--add name="NEWCRMEntities" connectionString="metadata=res://*/Models.NEWCRM.csdl|res://*/Models.NEWCRM.ssdl|res://*/Models.NEWCRM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:parnupongk.database.windows.net,1433;initial catalog=newcrm;persist security info=True;user id=parnupongk;password=aonbom@1101;Trusted_Connection=False&quot;" providerName="System.Data.EntityClient" /-->
-    <add name="NEWCRMEntities" connectionString="metadata=res://*/Models.NEWCRM.csdl|res://*/Models.NEWCRM.ssdl|res://*/Models.NEWCRM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CRMORIGIN;persist security info=True;user id=sa;password=aonbom;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="NEWCRMEntities" connectionString="metadata=res://*/Models.NEWCRM.csdl|res://*/Models.NEWCRM.ssdl|res://*/Models.NEWCRM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=PPHAPPY\SQLEXPERESS;initial catalog=CRMORIGIN;persist security info=True;user id=sa;password=pphappy;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
