--- a/NEWCRM/NEWCRM.csproj
+++ b/NEWCRM/NEWCRM.csproj
@@ -2049,6 +2049,7 @@
     </EntityDeploy>
     <Content Include="Images\logo-cafe.jpg" />
     <Content Include="Images\logo.png" />
+    <Content Include="Images\logo_in_excel.jpg" />
     <Content Include="Images\Origin_Logo.png" />
     <Content Include="Images\Origin_Logo_Home.png" />
     <Content Include="Models\NEWCRM.Context.tt">
