--- a/NEWCRM/Web.config
+++ b/NEWCRM/Web.config
@@ -19,6 +19,8 @@
     <!--add name="NEWCRMEntities" connectionString="metadata=res://*/Models.NEWCRM.csdl|res://*/Models.NEWCRM.ssdl|res://*/Models.NEWCRM.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=CRMORIGIN;persist security info=True;user id=sa;password=aonbom;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /-->
   </connectionStrings>
   <appSettings>
+    <add key="PATHUPLOADFILE" value="~/Uploadfiles/"/>
+    <add key="EMAILSUBJECT" value="ETDA"/>
     <add key="ENDCALL_SURVEY" value="Exxon"/>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -38,19 +40,19 @@
     <add key="CASE_Payment_Type" value="ชำระเงินปลายทาง|ชำระเงินผ่านบัญชีธนาคาร|ชำระเงินผ่านบัตรเครดิต|ชำระเงินผ่าน 3rd Party|อื่นๆ" />
     <add key="CASE_Value_Range" value="น้อยกว่า 1000 บาท|1,001 - 2,000 บาท|2,001 - 3,000 บาท|3,001 - 5,000 บาท|5,001 - 10,000 บาท|มากกว่า 10,000 บาท " />
     <add key="CASE_Conversation_Channel" value="โทรศัพท์|อีเมล|facebook|instagram|Line|Blog|อื่นๆ" />
-    <add key ="CASE_Status_Reason" value="Complete|Escalate|Open – ปิดมือถือ|Open – ไมร่ับสาย|Open – หมายเลขยังไม่เปิดให้บริการ|Open – ฝากข้อความ|Transfer to ETDA"/>
-    <add key ="CASE_Email_ETDA_To" value="test@test.com"/>
-    <add key ="CASE_Email_ETDA_CC" value="test@test.com"/>
-    <add key ="CASE_Email_PACC_To" value="test@test.com"/>
-    <add key ="CASE_Email_PACC_CC" value="test@test.com"/>
-    <add key ="CASE_Email_TCSD_To" value="test@test.com"/>
-    <add key ="CASE_Email_TCSD_CC" value="test@test.com"/>
-    <add key ="CASE_Email_FDA_To" value="test@test.com"/>
-    <add key ="CASE_Email_FDA_CC" value="test@test.com"/>
-    <add key ="CASE_Email_ThaiCERT_To" value="test@test.com"/>
-    <add key ="CASE_Email_ThaiCERT_CC" value="test@test.com"/>
-    <add key ="CASE_Email_OTO_To" value="test@test.com"/>
-    <add key ="CASE_Email_OTO_CC" value="test@test.com"/>
+    <add key ="CASE_Status_Reason" value="Complete|Escalate|Open – ปิดมือถือ|Open – ไม่รับสาย|Open – หมายเลขยังไม่เปิดให้บริการ|Open – ฝากข้อความ|Transfer to ETDA"/>
+    <add key ="CASE_Email_ETDA_To" value="occ@etda.or.th"/>
+    <add key ="CASE_Email_ETDA_CC" value="mict1212@oto.samartcorp.com "/>
+    <add key ="CASE_Email_PACC_To" value="csoc@mict.go.th, itcrime@mict.go.th "/>
+    <add key ="CASE_Email_PACC_CC" value="occ@etda.or.th ,mict1212@oto.samartcorp.com"/>
+    <add key ="CASE_Email_TCSD_To" value="occ@etda.or.th"/>
+    <add key ="CASE_Email_TCSD_CC" value="mict1212@oto.samartcorp.com"/>
+    <add key ="CASE_Email_FDA_To" value="occ@etda.or.th"/>
+    <add key ="CASE_Email_FDA_CC" value="mict1212@oto.samartcorp.com"/>
+    <add key ="CASE_Email_ThaiCERT_To" value="report@thaicert.or.th"/>
+    <add key ="CASE_Email_ThaiCERT_CC" value="occ@etda.or.th ,mict1212@oto.samartcorp.com"/>
+    <add key ="CASE_Email_OTO_To" value=""/>
+    <add key ="CASE_Email_OTO_CC" value=""/>
   
   <add key ="CASE_ID_PACC" value="141,143,144"/>
   <add key ="CASE_ID_PACC_TCSD" value="142"/>
